==> china-djyos/djyos/bsp/cpudrv/LPC/17xx/src/uart/cpu_peri_uart.c <==
#include "cpu_peri.h"
#include "string.h"
#include <device/djy_uart.h>
#include "stdio.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_UART    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_UART0_SENDBUF_LEN            32                 //"UART0发送环形缓冲区大小",
#define CFG_UART0_RECVBUF_LEN            32                 //"UART0接收环形缓冲区大小",
#define CFG_UART1_SENDBUF_LEN            32                 //"UART1发送环形缓冲区大小",
#define CFG_UART1_RECVBUF_LEN            32                 //"UART1接收环形缓冲区大小",
#define CFG_UART2_SENDBUF_LEN            32                 //"UART2发送环形缓冲区大小",
#define CFG_UART2_RECVBUF_LEN            32                 //"UART2接收环形缓冲区大小",
#define CFG_UART3_SENDBUF_LEN            32                 //"UART3发送环形缓冲区大小",
#define CFG_UART3_RECVBUF_LEN            32                 //"UART3接收环形缓冲区大小",
#define CFG_UART0_ENABLE                 true               //"是否配置使用UART0",
#define CFG_UART1_ENABLE                 false              //"是否配置使用UART1",
#define CFG_UART2_ENABLE                 false              //"是否配置使用UART2",
#define CFG_UART3_ENABLE                 false              //"是否配置使用UART3",
#define tagUartReg              LPC_UART_TypeDef
#define CN_UART0_BASE           LPC_UART0_BASE
#define CN_UART1_BASE           LPC_UART1_BASE
#define CN_UART2_BASE           LPC_UART2_BASE
#define CN_UART3_BASE           LPC_UART3_BASE

static void __UART_BaudSet(tagUartReg volatile *Reg,u32 baud)
{
    u8 DLL,DLM;
    u32 temp;
    if(Reg == NULL)
        return;

    temp = ( CN_CFG_CCLK / 16 ) / baud ;    /*baud rate */
    DLM = temp / 256;
    DLL = temp % 256;

    Reg->LCR |= (1<<7);         //  DLAB = 1
    Reg->DLL  = DLL;            // 115200
    Reg->DLM  = DLM;
    Reg->LCR &= ~(1<<7);        // DLAB = 0

    if(tg_UART_Reg[TxDirectPort] == Reg)
    {
        TxByteTime = 11000000/baud;     //1个字节传输时间，按10bit，+10%计算
    }
}

static void __UART_HardInit(u8 SerialNo)
{
    if(SerialNo > CN_UART3)
        return;
    __UART_GpioConfig(SerialNo);
    if(SerialNo == CN_UART0)
    {
        LPC_SC->PCONP |= (1<<3);
        LPC_SC->PCLKSEL0 &= ~(0x03<<6);
        LPC_SC->PCLKSEL0 |= (0x01<<6);  //对PCLK 1 分频
    }
    else if(SerialNo == CN_UART1)
    {
        LPC_SC->PCONP |= (1<<4);
        LPC_SC->PCLKSEL0 &= ~(0x03<<8);
        LPC_SC->PCLKSEL0 |= (0x01<<8);
    }
    else if(SerialNo == CN_UART2)
    {
        LPC_SC->PCONP |= (1<<24);
        LPC_SC->PCLKSEL1 &= ~(0x03<<16);
        LPC_SC->PCLKSEL1 |= (0x01<<16);
    }
    else
    {
        LPC_SC->PCONP |= (1<<25);
        LPC_SC->PCLKSEL1 &= ~(0x03<<18);
        LPC_SC->PCLKSEL1 |= (0x01<<18);
    }
    __UART_BaudSet(tg_UART_Reg[SerialNo],115200);

    tg_UART_Reg[SerialNo]->IIR;             // 读一下清除所有中断标志
    tg_UART_Reg[SerialNo]->LCR |= 0x83;     // 8 bits, no Parity, 1 Stop bit
    tg_UART_Reg[SerialNo]->LCR  = 0x03;     // DLAB = 0
    tg_UART_Reg[SerialNo]->FCR  = (0x07 | (0x02<<6)); // 使能FIFO，且配置触发水平8Bytes
    tg_UART_Reg[SerialNo]->TER  = 0x80;     // 发送使能
    tg_UART_Reg[SerialNo]->IER  = 0x01;     // 使能接收中断

}

static ptu32_t __UART_Ctrl(tagUartReg *Reg,u32 cmd, va_list *arg0)
{
    u8 i;
    for(i =0; i < CN_UART_NUM;i++)
    {
        if(tg_UART_Reg[i] == Reg)
            break;
    }
    if(i == CN_UART_NUM)
        return 0;
    switch(cmd)
    {
        case CN_DEV_CTRL_START:
            __UART_RxIntEnable(Reg);
            __UART_TxIntEnable(Reg);
            break;
        case CN_DEV_CTRL_STOP:
            __UART_RxIntDisable(Reg);
            __UART_TxIntDisable(Reg);
            break;
        case CN_DEV_CTRL_SHUTDOWN:
            break;
        case CN_DEV_CTRL_SLEEP:
            break;
        case CN_DEV_CTRL_RESUME:
            break;
        case CN_UART_SET_BAUD:  //设置Baud
        {
            u32 data;
            data = va_arg(*arg0, u32);
            __UART_BaudSet(Reg, data);
        }
            break;
        case CN_UART_RX_PAUSE:      //暂停接收
            __UART_RxIntDisable(Reg);
            break;
        case CN_UART_RX_RESUME:      //恢复接收
            __UART_RxIntEnable(Reg);
            break;
        case CN_UART_RECV_HARD_LEVEL:    //设置接收fifo触发水平
        {
            Reg->FCR &= ~(0x03<<6);
            switch (data1)
            {
                case 1:
                    Reg->FCR |= 0x00<<6;//1字节触发
                    break;
                case 4:
                    Reg->FCR |= 0x01<<6;//4字节触发
                    break;
                case 8:
                    Reg->FCR |= 0x02<<6;//8字节触发
                    break;
                case 14:
                    Reg->FCR |= 0x03<<6;//14字节触发
                    break;
                default :break;
            }
            break;
        }
        case CN_UART_COM_SET:
        {
            struct COMParam *COM;
            COM = va_arg(*arg0, void *);
            __UART_ComConfig(Reg,COM);
        }
            break;
        case CN_UART_HALF_DUPLEX_RECV:
            Board_UartHalfDuplexRecv(i);
            break;
        case CN_UART_HALF_DUPLEX_SEND:
            Board_UartHalfDuplexSend(i);
            break;
        default: break;
    }
    return 0;
}

static u32 UART_ISR(ptu32_t IntLine)
{
    struct UartGeneralCB *UCB;
    volatile tagUartReg *Reg;
    u32 recv_trans,num,IIR;
    u8 ch[16],port;

    switch(IntLine)
    {
    case CN_INT_LINE_UART0:   port = CN_UART0;   break;
    case CN_INT_LINE_UART1:   port = CN_UART1;   break;
    case CN_INT_LINE_UART2:   port = CN_UART2;   break;
    case CN_INT_LINE_UART3:   port = CN_UART3;   break;
    default:return 0;
    }

    UCB = pUartCB[port];
    Reg =  tg_UART_Reg[port];
    while(1)
    {
        IIR = Reg->IIR;
        if(IIR & 0x01)  //无中断
            return 0;
        IIR = (IIR>>1)&0x7;
        switch(IIR)
        {
            case 1:     //发送fifo寄存器空
            {
                recv_trans = UART_PortRead(UCB,ch,16);
                if(recv_trans != 0)
                {
                    for(num = 0; num < recv_trans; num++)
                    {
                        Reg->THR = ch[num];
                    }
                }
            }break;
            case 2:     //接收触发水平到
            case 6:     //接收超时，fifo中至少有一个数据，连续4字符时间无新数据
            {
                for(num = 0; num<16; num++)
                {
                    if(Reg->LSR & 0x01)
                        ch[num] = Reg->RBR;
                    else
                        break;
                }
                UART_PortWrite(UCB,ch,num);
            }break;
            case 3:     //出错标志
            {
                UART_ErrHandle(UCB,CN_UART_HARD_COMM_ERR);
            }break;
            default: return 0;
        }
    }
    return 0;
}

s32 Uart_PutStrDirect(const char *str,u32 len)
{
    u32 result = 0;
    s32 timeout = TxByteTime * len;
    u16 CR_Bak;

    CR_Bak = GetCharDirectReg->IER;                          //Save INT
    __UART_TxIntDisable(GetCharDirectReg);                   //disable send INT
    for(result=0; result < len+1; result ++)
    {
        // 超时或者发送缓冲为空时退出
        while((false == __UART_TxTranEmpty(PutStrDirectReg))&& (timeout > 10))
        {
            timeout -=10;
            DJY_DelayUs(10);
        }
        if( (timeout <= 10) || (result == len))
            break;
        PutStrDirectReg->THR = str[result];
    }
    PutStrDirectReg->IER = CR_Bak;                         //restore send INT
    return result;
}

char Uart_GetCharDirect(void)
{
    u16 CR_Bak;
    char result;

    CR_Bak = GetCharDirectReg->IER;                          //Save INT
    __UART_TxIntDisable(GetCharDirectReg);                   //disable send INT
    while(__UART_RxHadChar(GetCharDirectReg) == false) ;
    result = GetCharDirectReg->RBR;
    PutStrDirectReg->IER = CR_Bak;                         //restore send INT
    return result;
}
