==> china-djyos/djyos/bsp/cpudrv/Nuvoton/M480/src/uart/cpu_peri_uart.c <==
#include "stdint.h"
#include "stdio.h"
#include "string.h"
#include "errno.h"
#include "systime.h"
#include "cpu_peri.h"
#include <device/djy_uart.h>
#include "int.h"
#include "djyos.h"
#include "cpu_peri_dma.h"
#include "stdlib.h"
#include "uartctrl.h"
#include "device.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_UART    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_UART0_SENDBUF_LEN            32                 //"UART1发送环形缓冲区大小",
#define CFG_UART0_RECVBUF_LEN            32                 //"UART1接收环形缓冲区大小",
#define CFG_UART0_DMABUF_LEN             32                 //"UART1 DMA缓冲区大小",
#define CFG_UART1_SENDBUF_LEN            32                 //"UART2发送环形缓冲区大小",
#define CFG_UART1_RECVBUF_LEN            32                 //"UART2接收环形缓冲区大小",
#define CFG_UART1_DMABUF_LEN             32                 //"UART2 DMA缓冲区大小",
#define CFG_UART2_SENDBUF_LEN            32                 //"UART3发送环形缓冲区大小",
#define CFG_UART2_RECVBUF_LEN            32                 //"UART3接收环形缓冲区大小",
#define CFG_UART2_DMABUF_LEN             32                 //"UART3 DMA缓冲区大小",
#define CFG_UART3_SENDBUF_LEN            32                 //"UART4发送环形缓冲区大小",
#define CFG_UART3_RECVBUF_LEN            32                 //"UART4接收环形缓冲区大小",
#define CFG_UART3_DMABUF_LEN             32                 //"UART4 DMA缓冲区大小",
#define CFG_UART4_SENDBUF_LEN            32                 //"UART5发送环形缓冲区大小",

static void __UART_BaudSet(tagUartReg volatile *Reg,uint8_t port,uint32_t baud)
{
    uint32_t u32UartClkSrcSel=0ul, u32UartClkDivNum=0ul;
    uint32_t u32ClkTbl[4] = {__HXT, 0ul, __LXT, __HIRC};
    uint32_t u32Baud_Div = 0ul;

    if(port == CN_UART0)
    {
        /* Get UART clock source selection */
        u32UartClkSrcSel = ((uint32_t)(CLK->CLKSEL1 & CLK_CLKSEL1_UART0SEL_Msk)) >> CLK_CLKSEL1_UART0SEL_Pos;
        /* Get UART clock divider number */
        u32UartClkDivNum = (CLK->CLKDIV0 & CLK_CLKDIV0_UART0DIV_Msk) >> CLK_CLKDIV0_UART0DIV_Pos;
    }
    else if(port == CN_UART1)
    {
        /* Get UART clock source selection */
        u32UartClkSrcSel = (CLK->CLKSEL1 & CLK_CLKSEL1_UART1SEL_Msk) >> CLK_CLKSEL1_UART1SEL_Pos;
        /* Get UART clock divider number */
        u32UartClkDivNum = (CLK->CLKDIV0 & CLK_CLKDIV0_UART1DIV_Msk) >> CLK_CLKDIV0_UART1DIV_Pos;
    }
    else if(port == CN_UART2)
    {
        /* Get UART clock source selection */
        u32UartClkSrcSel = (CLK->CLKSEL3 & CLK_CLKSEL3_UART2SEL_Msk) >> CLK_CLKSEL3_UART2SEL_Pos;
        /* Get UART clock divider number */
        u32UartClkDivNum = (CLK->CLKDIV4 & CLK_CLKDIV4_UART2DIV_Msk) >> CLK_CLKDIV4_UART2DIV_Pos;
    }
    else if(port == CN_UART3)
    {
        /* Get UART clock source selection */
        u32UartClkSrcSel = (CLK->CLKSEL3 & CLK_CLKSEL3_UART3SEL_Msk) >> CLK_CLKSEL3_UART3SEL_Pos;
        /* Get UART clock divider number */
        u32UartClkDivNum = (CLK->CLKDIV4 & CLK_CLKDIV4_UART3DIV_Msk) >> CLK_CLKDIV4_UART3DIV_Pos;
    }
    else if(port == CN_UART4)
    {
        /* Get UART clock source selection */
        u32UartClkSrcSel = (CLK->CLKSEL3 & CLK_CLKSEL3_UART4SEL_Msk) >> CLK_CLKSEL3_UART4SEL_Pos;
        /* Get UART clock divider number */
        u32UartClkDivNum = (CLK->CLKDIV4 & CLK_CLKDIV4_UART4DIV_Msk) >> CLK_CLKDIV4_UART4DIV_Pos;
    }
    else if(port == CN_UART5)
    {
        /* Get UART clock source selection */
        u32UartClkSrcSel = (CLK->CLKSEL3 & CLK_CLKSEL3_UART5SEL_Msk) >> CLK_CLKSEL3_UART5SEL_Pos;
        /* Get UART clock divider number */
        u32UartClkDivNum = (CLK->CLKDIV4 & CLK_CLKDIV4_UART5DIV_Msk) >> CLK_CLKDIV4_UART5DIV_Pos;
    }

    /* Get PLL clock frequency if UART clock source selection is PLL */
    if(u32UartClkSrcSel == 1ul)
    {
        u32ClkTbl[u32UartClkSrcSel] = CLK_GetPLLClockFreq();
    }

    /* Set UART baud rate */
    if(baud != 0ul)
    {
        u32Baud_Div = UART_BAUD_MODE2_DIVIDER((u32ClkTbl[u32UartClkSrcSel]) / (u32UartClkDivNum + 1ul), baud);

        if(u32Baud_Div > 0xFFFFul)
        {
            Reg->BAUD = (UART_BAUD_MODE0 | UART_BAUD_MODE0_DIVIDER((u32ClkTbl[u32UartClkSrcSel]) / (u32UartClkDivNum + 1ul), baud));
        }
        else
        {
            Reg->BAUD = (UART_BAUD_MODE2 | u32Baud_Div);
        }
    }

}

static void __UART_HardInit(uint8_t SerialNo)
{
    if(SerialNo > CN_UART5)
        return;

    __UART_GpioConfig(SerialNo); //使能管脚

    /* Select UART function */
    tg_UART_Reg[SerialNo]->FUNCSEL = UART_FUNCSEL_UART;
     /* Set UART line configuration */
    tg_UART_Reg[SerialNo]->LINE = UART_WORD_LEN_8 | UART_PARITY_NONE | UART_STOP_BIT_1;
     /* Set UART Rx and RTS trigger level */
    tg_UART_Reg[SerialNo]->FIFO &= ~(UART_FIFO_RFITL_Msk | UART_FIFO_RTSTRGLV_Msk);

    __UART_BaudSet(tg_UART_Reg[SerialNo],SerialNo,115200); //波特率初始化

    UART_ENABLE_INT(tg_UART_Reg[SerialNo], (UART_INTEN_RDAIEN_Msk | UART_INTEN_THREIEN_Msk));
}

static ptu32_t __UART_Ctrl(tagUartReg *Reg,u32 cmd, va_list *arg0)
{
    ptu32_t result = 0;
    u32 port;

    if(Reg == NULL)
        return 0;

    switch((uint32_t)Reg)
    {
    case CN_UART0_BASE: port = CN_UART0;break;
    case CN_UART1_BASE: port = CN_UART1;break;
    case CN_UART2_BASE: port = CN_UART2;break;
    case CN_UART3_BASE: port = CN_UART3;break;
    case CN_UART4_BASE: port = CN_UART4;break;
    case CN_UART5_BASE: port = CN_UART5;break;
    default:return 0;
    }

    switch(cmd)
    {
        case CN_DEV_CTRL_START:
            __UART_Enable(port);
            break;
        case CN_DEV_CTRL_STOP:
            __UART_Disable(port);
            break;
        case CN_UART_SET_BAUD:  //设置Baud
        {
            u32 data;
            data = va_arg(*arg0, u32);
            __UART_BaudSet(Reg,port, data);
        }
            break;
        case CN_UART_EN_RTS:
            //Reg->CR3 |= 0x100;
            break;
        case CN_UART_DIS_RTS:
            //Reg->CR3 &= ~0x100;
            break;
        case CN_UART_EN_CTS:
            //Reg->CR3 |= 0x200;
            break;
        case CN_UART_DIS_CTS:
            //Reg->CR3 &= ~0x200;
            break;
        case CN_UART_DMA_USED:
             __UART_SetDmaUsed(port);
             break;
        case CN_UART_DMA_UNUSED:
            __UART_SetDmaUnUsed(port);
            break;
        case CN_UART_COM_SET:
        {
            struct COMParam *COM;
            COM = va_arg(*arg0, void *);
            __UART_ComConfig(Reg,port,COM);
        }
            break;
        default: break;
    }

    return result;
}

uint32_t UART_ISR(ptu32_t port)
{
    struct UartCB *UCB;
    tagUartReg *Reg;
    uint32_t num;
    uint8_t ch;
    uint32_t u32DAT;

    UCB = pUartCB[port];
    Reg = (tagUartReg *)tg_UART_Reg[port];
    if( (Reg->INTSTS & (1<<8)) &&(Reg->INTEN &(1<<0)))           //接收中断
    {
        ch = (uint8_t)Reg->DAT;
        num = UART_PortWrite(UCB,&ch,1);
        if(num != 1)
        {
            UART_ErrHandle(UCB,CN_UART_BUF_OVER_ERR);
        }
    }
    if((Reg->INTSTS & (1<<22))&&(Reg->INTEN & (1<<22)) )   //发生完成中断
    {
        Reg->INTEN &= ~(1<<22);
        Board_UartHalfDuplexRecv(port);
    }
    if((Reg->INTSTS & (1<<9))&&(Reg->INTEN & (1<<1)))    //发送中断
    {
        num = UART_PortRead(UCB,&ch,1);
        if(num != 0)
            Reg->DAT = ch;
        else
        {
            Reg->INTEN &= ~(1<<1);        //关闭发送中断使能
            Reg->INTEN |= (1<<22);    //使能发送完成中断
        }
    }
    if(Reg->FIFOSTS & (1<<0))        //ORE过载错误
    {
        ch = (uint8_t)Reg->DAT;
        num = Reg->FIFOSTS;     //读一下sr寄存器
        UART_ErrHandle(UCB,CN_UART_FIFO_OVER_ERR);
    }
    if((Reg->INTSTS & (1<<15)) && (Reg->INTEN & (1<<8)))
    {
        Reg->DAT;
        //Int_TapLine(UartDmaRxInt[port]);
    }

    if((tg_UART_Reg[port]->INTSTS)& UART_INTSTS_HWRLSIF_Msk)
    {
        if(tg_UART_Reg[port]->FIFOSTS & UART_FIFOSTS_BIF_Msk)
            printf("\n BIF \n");
        if(tg_UART_Reg[port]->FIFOSTS & UART_FIFOSTS_FEF_Msk)
            printf("\n FEF \n");
        if(tg_UART_Reg[port]->FIFOSTS & UART_FIFOSTS_PEF_Msk)
            printf("\n PEF \n");

        u32DAT = tg_UART_Reg[port]->DAT; // read out data
        printf("\n Error Data is '0x%x' \n", u32DAT);
        tg_UART_Reg[port]->FIFOSTS = (UART_FIFOSTS_BIF_Msk | UART_FIFOSTS_FEF_Msk | UART_FIFOSTS_PEF_Msk);
    }

    return 0;
}

s32 Uart_PutStrDirect(const char *str,uint32_t len)
{
    uint32_t result = 0;
    s32 timeout = TxByteTime * len;
    uint16_t CR_Bak;
    uint8_t port;
    for(port=0;port<CN_UART_NUM;port++)
    {
        if(PutStrDirectReg ==tg_UART_Reg[port])
            break;
    }
    Board_UartHalfDuplexSend(port);
    CR_Bak = PutStrDirectReg->INTEN;                          //Save INT
    PutStrDirectReg->INTEN &= ~(1<<1);                        //disable send INT
    for(result=0; result < len+1; result ++)
    {
        // 超时或者发送缓冲为空时退出
        while((false == __UART_TxTranEmpty(PutStrDirectReg))&& (timeout > 10))
        {
            timeout -=10;
            DJY_DelayUs(10);
        }
        if( (timeout <= 10) || (result == len))
            break;
        PutStrDirectReg->DAT = str[result];
    }
    PutStrDirectReg->INTEN = CR_Bak;                         //restore send INT
    while((PutStrDirectReg->FIFO &(1<<28))!=(1<<28))
    {
        timeout -=10;
        DJY_DelayUs(10);
        if(timeout < 10)
           break;
    }
    Board_UartHalfDuplexRecv(port);
    return result;
}

char Uart_GetCharDirect(void)
{
    uint16_t CR_Bak;
    char result;

    CR_Bak = GetCharDirectReg->INTEN;                          //Save INT
    GetCharDirectReg->INTEN &= ~(1<<1);                        //disable send INT
    while(__UART_RxHadChar(GetCharDirectReg) == false) ;
    result = GetCharDirectReg->DAT;
    PutStrDirectReg->INTEN = CR_Bak;                         //restore send INT
    return result;
}
